<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0"
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0
         https://maven.apache.org/xsd/maven-4.0.0.xsd">

    <repositories>
    <repository>
        <id>jogamp</id>
        <url>https://jogamp.org/deployment/maven</url>
    </repository>
    </repositories>

    <modelVersion>4.0.0</modelVersion>

    <groupId>com.mongraphe</groupId>
    <artifactId>graph-ui</artifactId>
    <version>0.0.1-SNAPSHOT</version>
    <packaging>jar</packaging>

    <properties>
        <java.version>21</java.version>
        <javafx.version>21</javafx.version>
        <jogamp.version>2.4.0</jogamp.version>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <dependencies>
        <!-- JavaFX modules sans classifier -->
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-controls</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
        <groupId>org.openjfx</groupId>
            <artifactId>javafx-swing</artifactId>
            <version>${javafx.version}</version>
        </dependency>
        <dependency>
            <groupId>org.openjfx</groupId>
            <artifactId>javafx-fxml</artifactId>
            <version>${javafx.version}</version>
        </dependency>

        <!-- JOGL -->
        <dependency>
            <groupId>org.jogamp.jogl</groupId>
            <artifactId>jogl-all-main</artifactId>
            <version>${jogamp.version}</version>
        </dependency>
        <dependency>
            <groupId>org.jogamp.gluegen</groupId>
            <artifactId>gluegen-rt-main</artifactId>
            <version>${jogamp.version}</version>
        </dependency>
    </dependencies>

    <build>
        <plugins>
            <!-- Compilation -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>3.11.0</version>
                <configuration>
                    <release>${java.version}</release>
                </configuration>
            </plugin>

            <!-- JavaFX runtime -->
            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>0.0.8</version>
                <configuration>
                    <mainClass>com.mongraphe.graphui.app.MainApp</mainClass>
                    <options>
                        <!-- JNI -->
                        <option>-Djava.library.path=${project.basedir}/../graph-native/out</option>
                        <option>-Dmongraphe.native.path=${project.basedir}/../graph-native/out/libnative.so</option>

                        
                        <option>--enable-native-access=ALL-UNNAMED</option>
                        <option>--enable-native-access=javafx.graphics</option>
                        <option>--enable-native-access=javafx.swing</option>

                        <!-- Debug rendu -->
                        <option>-Dprism.verbose=true</option>
                        <!-- Force utilisation GPU pour JavaFX-->
                        <option>-Dprism.forceGPU=true</option>

                        <!-- Accès internes requis par JOGL -->
                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</option>

                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED</option>

                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.glass.ui=ALL-UNNAMED</option>

                        <option>--add-opens</option>
                        <option>javafx.graphics/com.sun.javafx.scene=ALL-UNNAMED</option>

                        <option>--add-opens</option>
                        <option>javafx.graphics/javafx.stage=ALL-UNNAMED</option>

                        <!-- Exports -->
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.tk=ALL-UNNAMED</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.tk.quantum=ALL-UNNAMED</option>
                        <option>--add-exports</option>
                        <option>javafx.graphics/com.sun.javafx.stage=ALL-UNNAMED</option>
                    </options>
                </configuration>
            </plugin>
        </plugins>
    </build>
</project>